<resources>
    <string name="app_name">Sensors</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="gps">GPS</string>
    <string name="network_cell_tower">Network Cell Tower</string>
    <string name="wifi_access_point">WiFi Access Point</string>
    <string name="microphone">Microphone</string>
    <string name="export_to_csv">EXPORT TO CSV</string>
</resources>
